--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
   line-height: 30px;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-tap-highlight-color: transparent;
 }
 body {
@@ -69,7 +69,7 @@ a {
 // colors
 $main: #009640;
 $main20: #00964033;
-$main5: #0096400D;
+$main5: #0096400d;
 $second: #006633;
 $text: #666b88;
 $white: #ffffff;
@@ -79,7 +79,7 @@ $lightGray: #eeeeee;
 $inputHint: #aaaaaa;
 $inputBg: #f8f8f8;
 $inputStroke: #e9e9e9;
-$transition: all .4s ease-in-out;
+$transition: all 0.4s ease-in-out;
 $shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
 // ********************************** //
@@ -336,9 +336,9 @@ header {
     height: 80px;
     background-image: linear-gradient(
         rgba(255, 255, 255, 1),
-        rgba(255, 255, 255, .8)
+        rgba(255, 255, 255, 0.8)
       ),
-      url('../images/search.jpg');
+      url("../images/search.jpg");
     background-size: cover;
     background-position: center;
     border-radius: 0 0 24px 24px;
@@ -381,7 +381,7 @@ header {
     z-index: 9;
     background: $white;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
-    animation: .4s sticky ease-in-out;
+    animation: 0.4s sticky ease-in-out;
     .search_wrapper {
       display: none;
     }
@@ -474,7 +474,7 @@ main {
         position: relative;
         @include centerFlex();
         &::before {
-          content: '';
+          content: "";
           position: absolute;
           width: 100%;
           height: 1px;
@@ -803,7 +803,7 @@ main {
   .profile_section {
     padding: 60px 0;
     .profile_card {
-      box-shadow: 0px 4px 16px 0px #0000001A;
+      box-shadow: 0px 4px 16px 0px #0000001a;
       border-radius: 200px;
       padding: 8px;
       display: flex;
@@ -1463,6 +1463,7 @@ input[type="radio"] {
       }
     }
     .content {
+      transition: $transition;
       padding: 8px 12px;
       border-radius: 8px;
       border: 1px solid $inputStroke;
@@ -1528,7 +1529,8 @@ input[type="number"]::-webkit-inner-spin-button {
 .actions {
   gap: 12px;
   display: flex;
-  button {
+  span {
+    padding: 4px;
     @include clearInput();
     i {
       font-size: 18px;
@@ -1593,7 +1595,7 @@ input[type="number"]::-webkit-inner-spin-button {
     color: $dark;
     font-weight: 500;
     position: absolute;
-    transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
     top: 12px;
     left: 12px;
     padding: 0 32px 0 4px;
@@ -1641,7 +1643,8 @@ input[type="number"]::-webkit-inner-spin-button {
     }
     .country-picker {
       pointer-events: none;
-      border: none;
+      visibility: hidden;
+      border: none !important;
     }
   }
 }
@@ -1656,6 +1659,80 @@ input[type="number"]::-webkit-inner-spin-button {
       font-weight: 600;
       margin: 0;
       font-size: 18px !important;
+    }
+  }
+}
+.star-rating-proficiency,
+.star-rating-interest {
+  display: flex;
+  gap: 4px;
+  label {
+    cursor: pointer;
+    color: #eee;
+    &.active {
+      color: gold;
+    }
+  }
+  input {
+    display: none;
+    appearance: none;
+  }
+}
+.rating_field {
+  @include space-between();
+  align-items: center;
+  padding: 8px 0;
+  h6 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+.work_samples_grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 12px;
+  .img_upload {
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    border: 1px solid $inputStroke;
+    @include centerFlex();
+    cursor: pointer;
+    input {
+      display: none;
+    }
+    img {
+      height: 48px;
+    }
+  }
+  .uploadedImage {
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    overflow: hidden;
+    position: relative;
+    @include centerFlex();
+    cursor: pointer;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .delete {
+      position: absolute;
+      top: 6px;
+      right: 6px;
+      background: $white;
+      border-radius: 50%;
+      width: 26px;
+      height: 26px;
+      @include centerFlex();
+      img {
+        height: 16px;
+        width: 16px;
+      }
     }
   }
 }
