--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1359,10 +1359,21 @@ input[type=radio]:checked::after {
   font-size: 32px;
   color: #ffffff;
 }
+@media screen and (max-width: 576px) {
+  .create_resume .wrapper .content h1 {
+    font-size: 24px;
+  }
+}
 .create_resume .wrapper .content p {
   margin: 0;
   font-size: 16px;
   color: #ffffff;
+}
+@media screen and (max-width: 576px) {
+  .create_resume .wrapper .content p {
+    font-size: 12px;
+    line-height: 22px;
+  }
 }
 .create_resume .wrapper .content .avatar {
   height: 100%;
@@ -1370,6 +1381,8 @@ input[type=radio]:checked::after {
 }
 .create_resume .wrapper .content .avatar img {
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .create_resume .wrapper .thumb {
   position: absolute;
@@ -1377,7 +1390,8 @@ input[type=radio]:checked::after {
   right: 0;
   width: 140px;
   height: 100px;
-  background-size: cover;
+  background-position: top right;
+  background-repeat: no-repeat;
   background-image: url(../images/thumb.png);
 }
 
@@ -1682,7 +1696,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 .input_field textarea {
   padding-top: 16px;
-  height: 132px;
+  height: 148px !important;
 }
 .input_field .location {
   display: flex;
@@ -1817,4 +1831,321 @@ input[type=number]::-webkit-inner-spin-button {
 .work_samples_grid .uploadedImage .delete img {
   height: 16px;
   width: 16px;
+}
+
+footer {
+  border-top: 1px solid #e9e9e9;
+  padding: 40px 0 0;
+}
+footer .about_company {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+footer .about_company .logo {
+  height: 40px;
+}
+footer .about_company .logo img {
+  height: 40px;
+}
+footer .about_company .text p {
+  color: #666b88;
+  line-height: 26px;
+}
+footer .col {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-left: 30px;
+}
+@media screen and (max-width: 576px) {
+  footer .col {
+    padding: 0;
+  }
+}
+footer .col:last-child {
+  padding-left: 0;
+}
+footer .col h3 {
+  color: #1d1d1b;
+  font-weight: 600;
+  margin: 0;
+  font-size: 18px !important;
+}
+footer .col ul li {
+  line-height: 24px;
+}
+footer .col ul li a {
+  display: flex;
+  gap: 4px;
+  color: #666b88;
+  transition: 0.2s ease-in-out;
+}
+footer .col ul li a:hover {
+  color: #009640;
+}
+footer .col ul li a:hover span {
+  width: 16px;
+}
+footer .col ul li a span {
+  transition: all 0.4s ease-in-out;
+  width: 0;
+  overflow: hidden;
+}
+footer .copy_rights {
+  border-top: 1px solid #e9e9e9;
+  padding: 20px 0 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (max-width: 576px) {
+  footer .copy_rights {
+    flex-direction: column-reverse;
+    gap: 12px;
+  }
+}
+footer .copy_rights p a {
+  color: #009640;
+}
+footer .copy_rights .social_media ul {
+  display: flex;
+  gap: 8px;
+}
+footer .copy_rights .social_media ul a {
+  border: 1px solid #e9e9e9;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  transition: 0.2s ease-in-out;
+  color: #aaaaaa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer .copy_rights .social_media ul a i {
+  font-size: 14px;
+}
+footer .copy_rights .social_media ul a:hover {
+  background: #009640;
+  border-color: #009640;
+  transform: translateY(-2px);
+}
+footer .copy_rights .social_media ul a:hover i {
+  color: #ffffff;
+}
+footer .copy_rights .social_media ul a:hover svg path {
+  fill: #ffffff;
+}
+
+.download-app {
+  display: flex !important;
+  flex-direction: column !important;
+  gap: 20px !important;
+}
+@media (max-width: 576px) {
+  .download-app {
+    flex-direction: row !important;
+  }
+}
+.download-app li {
+  width: 150px !important;
+  padding: 10px !important;
+  background: #f8f8f8 !important;
+  border-radius: 50px !important;
+  transition: all 0.3s ease-in-out !important;
+}
+.download-app li:hover {
+  background: #009640 !important;
+}
+.download-app li:hover a .icon i,
+.download-app li:hover a p {
+  color: #fff;
+}
+.download-app li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.download-app li a .icon {
+  width: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.download-app li a .icon i {
+  font-size: 18px;
+  color: #1d1d1b;
+}
+.download-app li a p {
+  font-size: 12px;
+  text-align: end;
+  line-height: 18px;
+  color: #1d1d1b;
+}
+
+.contact {
+  padding: 60px 0;
+}
+.contact .send_btn {
+  padding: 8px 32px;
+  border: none;
+  background: none;
+  outline: none;
+  background: #009640;
+  color: #ffffff;
+  border-radius: 8px;
+}
+.contact form {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.contact form .form {
+  width: 100%;
+}
+.contact h4 {
+  font-size: 40px;
+  color: #009640;
+  font-weight: 600;
+}
+
+.animatedMap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.worldMap {
+  width: 500px;
+  height: 500px;
+  order: 2;
+  position: relative;
+}
+.worldMap .earth {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 80%;
+  margin: -40%;
+  background: #fff url(../images/map.png) 0 50% repeat-x;
+  background-size: auto 90%;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 1em 2em;
+  border-radius: 100%;
+  overflow: hidden;
+  animation: map linear 90s infinite;
+}
+.worldMap .orbic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.worldMap .orbic svg {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+.worldMap #orbic_path {
+  fill: none;
+  stroke: rgba(0, 0, 0, 0.1);
+  stroke-linecap: round;
+  stroke-width: 4px;
+  stroke-dasharray: 1 9;
+  animation: orbic linear 2s infinite;
+}
+.worldMap #orbic_dots use {
+  fill: #fff;
+  stroke: rgba(30, 144, 255, 0.25);
+  stroke-width: 4;
+  animation: dots ease 1s infinite alternate;
+}
+.worldMap #orbic_dot1 {
+  transform: translate(50.4%, 29.6%);
+}
+.worldMap #orbic_dot2 {
+  transform: translate(5%, 62.8%);
+  animation-delay: 0.2s !important;
+}
+.worldMap #orbic_dot3 {
+  transform: translate(97%, 41%);
+  animation-delay: 0.3s !important;
+}
+.worldMap #orbic_dot4 {
+  transform: translate(50%, 70.2%);
+  animation-delay: 0.5s !important;
+}
+.worldMap #orbic_dot5 {
+  transform: translate(31.5%, 51.5%);
+  animation-delay: 0.7s !important;
+}
+.worldMap #orbic_user1 {
+  transform: translate(1%, 40%) scale(0.666667);
+}
+.worldMap #orbic_user2 {
+  transform: translate(18%, 64%) scale(0.666667);
+}
+.worldMap #orbic_user3 {
+  transform: translate(39.5%, 31%) scale(0.666667);
+}
+.worldMap #orbic_user4 {
+  transform: translate(69%, 22%) scale(0.666667);
+}
+.worldMap #orbic_user5 {
+  transform: translate(75%, 53%) scale(0.666667);
+}
+@keyframes map {
+  100% {
+    background-position: 220% 50%;
+  }
+}
+@keyframes orbic {
+  100% {
+    stroke-dashoffset: 10;
+  }
+}
+@keyframes dots {
+  100%, 80% {
+    stroke: #1e90ff;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .worldMap {
+    width: 100%;
+    order: 2;
+    position: relative;
+  }
+  .worldMap .earth {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-color: transparent;
+    background-size: 100% auto;
+    box-shadow: none;
+    border-radius: 0;
+    animation: none;
+  }
+}
+@media (max-width: 600px) {
+  .worldMap {
+    height: 300px;
+  }
+}
+.profile_menu {
+  width: 300px;
+  height: 100%;
+  position: fixed;
+  top: 80px;
+  right: 0;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 4px;
+  z-index: 1000;
 }/*# sourceMappingURL=style.css.map */
